--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Student.", "Footballer.", "Creceker.", "Designer."]'></span>
+								     data-rotate='[ "Student.", "Footballer.", "Cricketer.", "Designer."]'></span>
 								</h2>
 							</div>
             </div>
